# insta

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cargo-insta/: Cargo.toml
cargo-insta/src/: cli.rs  inline.rs  walk.rs
cargo-insta/tests/functional/: .workspace.rs.pending-snap  binary.rs  delete_pending.rs  main.rs  workspace.rs
insta/: Cargo.toml
insta/src/: env.rs  lib.rs  macros.rs  output.rs  runtime.rs  settings.rs  snapshot.rs  test.rs  utils.rs
insta/tests/: test_inline.rs  test_settings.rs
insta/tests/snapshots/: insta__utils__format_rust_expression.snap  test_advanced__basic_suffixes@1.snap  test_advanced__basic_suffixes@2.snap  test_advanced__basic_suffixes@3.snap  test_basic__crlf.snap  test_basic__insta_sort_order.snap  test_basic__trailing_crlf.snap  test_binary__binary_snapshot.snap  test_binary__multipart_extension.snap  test_binary__name.snap  test_redaction__foo_bar.snap  test_redaction__foo_bar_alt.snap  test_redaction__foo_bar_deep.snap  test_redaction__foo_bar_full_range.snap  test_redaction__foo_bar_range.snap  test_redaction__foo_bar_range_from.snap  test_redaction__foo_bar_range_to.snap  test_redaction__map_key_redaction.snap  test_redaction__rounded_redaction.snap  test_redaction__user_json.snap  test_redaction__user_json_flags.snap  test_redaction__user_json_flags_alt.snap  test_redaction__user_json_settings.snap  test_redaction__user_json_settings_callback.snap  test_redaction__with_random_value.snap  test_redaction__with_random_value_and_trailing_comma.snap  test_redaction__with_random_value_inline_callback.snap  test_redaction__with_random_value_json_settings2.snap
similar/: Cargo.toml  README.md
similar-asserts/: Cargo.toml
similar-asserts/src/: serde_impl.rs
similar/src/algorithms/: myers.rs
similar/src/text/: abstraction.rs  inline.rs  mod.rs
similar/tests/snapshots/: similar__algorithms__capture__capture_hook_grouping-2.snap  similar__algorithms__capture__capture_hook_grouping.snap  similar__algorithms__lcs__contiguous.snap  similar__algorithms__lcs__diff.snap  similar__algorithms__lcs__pat.snap  similar__algorithms__lcs__same.snap  similar__algorithms__myers__contiguous.snap  similar__algorithms__myers__deadline_reached.snap  similar__algorithms__myers__diff.snap  similar__algorithms__myers__pat.snap  similar__algorithms__patience__patience.snap  similar__algorithms__patience__patience_out_of_bounds_bug.snap  similar__text__captured_ops.snap  similar__text__captured_word_ops.snap  similar__text__char_diff.snap  similar__text__inline__line_ops_inline.snap  similar__text__lifetimes_on_iter.snap  similar__text__line_ops.snap  similar__text__unified_diff.snap  similar__text__virtual_newlines.snap  similar__udiff__unified_diff.snap  similar__udiff__unified_diff_newline_hint-2.snap  similar__udiff__unified_diff_newline_hint.snap
vscode-insta/: package.json  tsconfig.json
vscode-insta/src/: SnapshotPathProvider.ts
