[package]
name = "cargo-insta"
version = "1.43.0"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A review tool for the insta snapshot testing library for Rust"
homepage = "https://insta.rs/"
repository = "https://github.com/mitsuhiko/insta"
documentation = "https://insta.rs/docs/cli/"
keywords = ["snapshot", "testing", "jest"]
categories = ["development-tools::cargo-plugins"]
edition = "2021"
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
insta = { version = "1.43", path = "../insta", features = [
    "json",
    "yaml",
    "redactions",
    "_cargo_insta_internal",
] }
# version > 18 doesn't work
cargo_metadata = { version = "0.18", default-features = false }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = { version = "1.0.60", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
ignore = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.5"
semver = { version = "1.0", features = ["serde"] }
clap = { workspace = true }
open = "5.3"
itertools = "0.14"

[dev-dependencies]
walkdir = "2.3.1"
similar = "2.2.1"
itertools = "0.14"
termcolor = "1.1.2"
os_pipe = "1.2.1"
